# snellie

./: .env_template  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
src/: config.py  main.py  pyproject.toml  utils.py
src/api/: app.py  auth.py  config.py  schemas.py  tags.py  utils.py
src/api/common/: error_handling.py  exceptions.py  predict.py
src/api/services/: firebase_service.py  s3_service.py
src/api/utils/: time_decorator.py
src/services/: firebase_service.py
src/utils/: custom_logging.py
